frontend/test/should_fail/uniqueofNode.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	n:Node;
	if { uniqueof(n)==42; }
	
	modify {
	}
}
